--- a/ExpenseWareModel/pom.xml
+++ b/ExpenseWareModel/pom.xml
@@ -24,5 +24,9 @@
 		<artifactId>hibernate-entitymanager</artifactId>
 		<version>4.0.1.Final</version>
 	</dependency>        
-  </dependencies>
+      <dependency>
+      	<groupId>org.projectlombok</groupId>
+      	<artifactId>lombok</artifactId>
+      	<version>0.9.3</version>
+      </dependency></dependencies>
 </project>
